# runtime-sized-array

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: array.rs  array_iters.rs  error.rs  lib.rs
tests/: test_array.rs  test_trait_impls.rs
